# sticky_driver

./: meson.build  pyproject.toml
src/: filter.hpp  sticky.cpp  sticky.hpp  wrapper.cpp
tests/decode_data/: main.cpp
