[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'numpy']

[project]
name = "sticky-driver"
description="A python module to control Sticky boards"
authors = [{name="Alexis Jeandet", email="alexis.jeandet@member.fsf.org"}]
summary = ""
requires-python=">=3.8"
license = {file="COPYING"}
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = ['numpy']
dynamic = [
  'version',
]
[project.urls]
homepage = "https://github.com/jeandet/sticky_driver"
